# trading_bot

./: README.md  pyproject.toml
ta-lib/: Makefile  bin  config.status  libtool
ta-lib/src/: Makefile
ta-lib/src/.libs/: libta_lib.0.0.0.dylib
ta-lib/src/ta_abstract/: Makefile
ta-lib/src/ta_abstract/.deps/: libta_abstract_gc_la-ta_abstract.Plo  libta_abstract_gc_la-ta_def_ui.Plo  libta_abstract_gc_la-ta_frame.Plo  libta_abstract_gc_la-ta_func_api.Plo  libta_abstract_gc_la-ta_group_idx.Plo  libta_abstract_gc_la-table_a.Plo  libta_abstract_gc_la-table_b.Plo  libta_abstract_gc_la-table_c.Plo  libta_abstract_gc_la-table_d.Plo  libta_abstract_gc_la-table_e.Plo  libta_abstract_gc_la-table_f.Plo  libta_abstract_gc_la-table_g.Plo  libta_abstract_gc_la-table_h.Plo  libta_abstract_gc_la-table_i.Plo  libta_abstract_gc_la-table_j.Plo  libta_abstract_gc_la-table_k.Plo  libta_abstract_gc_la-table_l.Plo  libta_abstract_gc_la-table_m.Plo  libta_abstract_gc_la-table_n.Plo  libta_abstract_gc_la-table_o.Plo  libta_abstract_gc_la-table_p.Plo  (+41 more)
ta-lib/src/ta_common/: Makefile
ta-lib/src/ta_func/: Makefile
ta-lib/src/tools/: Makefile
trading_bot/: Strategy.py  __init__.py  algotrade_classes.py  bot.py  config.py  main.py  telegram_trader.py  telegrambot.py  transaction_status.py
web_app/: __main__.py  app.py
web_app/config/: __init__.py
web_app/db/: __init__.py  models.py  tasks.py
web_app/tasks/: threads.py
web_app_front/: package-lock.json  package.json
web_app_front/public/: index.html
web_app_front/src/: App.js  auth.js  getProfileInfo.js  index.js  router.js
(+220 files in other folders)
